@@ -2,6 +2,7 @@ Release Notes
 
 * 11/1/2017
   * sending ES consumers to SCORE if there are not enough events
+  * added harvester_id and worker_id in getJobs
 
 * 10/10/2017
   * updated hint in getJobs
